remove unused code and optimize a few bits based on FindBugs analysis
git-svn-id: https://svn.apache.org/repos/asf/harmony/enhanced/classlib/trunk@766398 13f79535-47bb-0310-9956-ffa450edef68